[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menus/RebindMenu.gd" type="Script" id=1]

[node name="RebindMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPlaceholder" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.203922, 0.25098, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BackgroundPlaceholder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_constants/margin_right = 200
custom_constants/margin_top = 200
custom_constants/margin_left = 200
custom_constants/margin_bottom = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPlaceholder/MarginContainer"]
margin_left = 200.0
margin_top = 200.0
margin_right = 824.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer"]
margin_left = 239.0
margin_top = 10.0
margin_right = 385.0
margin_bottom = 190.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 140.0
custom_constants/separation = 10

[node name="HBox_player_up" type="HBoxContainer" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_up"]
margin_right = 65.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Move Up: "

[node name="Button" type="Button" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_up"]
margin_left = 134.0
margin_right = 146.0
margin_bottom = 20.0

[node name="HBox_player_down" type="HBoxContainer" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 146.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_down"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 17.0
size_flags_horizontal = 2
text = "Move Down: "

[node name="Button" type="Button" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_down"]
margin_left = 134.0
margin_right = 146.0
margin_bottom = 20.0

[node name="HBox_player_left" type="HBoxContainer" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 146.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_left"]
margin_top = 3.0
margin_right = 71.0
margin_bottom = 17.0
size_flags_horizontal = 2
text = "Move Left: "

[node name="Button" type="Button" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_left"]
margin_left = 134.0
margin_right = 146.0
margin_bottom = 20.0

[node name="HBox_player_right" type="HBoxContainer" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 146.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_right"]
margin_top = 3.0
margin_right = 79.0
margin_bottom = 17.0
size_flags_horizontal = 2
text = "Move Right: "

[node name="Button" type="Button" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_right"]
margin_left = 134.0
margin_right = 146.0
margin_bottom = 20.0

[node name="HBox_player_fire" type="HBoxContainer" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 146.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_fire"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 17.0
size_flags_horizontal = 2
text = "Fire: "

[node name="Button" type="Button" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_fire"]
margin_left = 134.0
margin_right = 146.0
margin_bottom = 20.0

[node name="MainMenuButton" type="Button" parent="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 146.0
margin_bottom = 180.0
text = "Return to Main Menu"
[connection signal="button_down" from="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_up/Button" to="." method="b_change_key_player_up"]
[connection signal="button_down" from="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_down/Button" to="." method="b_change_key_player_down"]
[connection signal="button_down" from="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_left/Button" to="." method="b_change_key_player_left"]
[connection signal="button_down" from="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_right/Button" to="." method="b_change_key_player_right"]
[connection signal="button_down" from="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/HBox_player_fire/Button" to="." method="b_change_key_player_fire"]
[connection signal="pressed" from="BackgroundPlaceholder/MarginContainer/ScrollContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
